# robot-lsp

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  vscode-extension.yml
clients/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  jest.config.cjs  language-configuration.json  package-lock.json  package.json  tsconfig.jest.json  tsconfig.json
clients/vscode/docs/: architecture.md  debugging.md  development.md  roadmap.md  testing.md  usage.md
clients/vscode/src/: extension.ts
clients/vscode/syntaxes/: robot.tmLanguage.json
clients/vscode/tests/: lsp-feature-smoke.cjs  package-smoke.cjs
docs/: architecture.md  changelog.md  release.md  roadmap.md  usage.md
docs/clients/: overview.md  vscode.md
docs/decisions/: ADR-0001-project-scope.md  ADR-0002-clean-architecture.md  ADR-0003-json-rpc-without-pygls.md  ADR-0004-robotframework-ast-adapter.md  ADR-0005-document-sync-strategy.md  ADR-0006-utf16-position-model.md
docs/specs/performance/: cancellation.md  debounce.md  parsing-cache.md  subprocess-isolation.md  workspace-index.md
docs/specs/protocol/: cancellation.md  errors.md  json-rpc.md  lifecycle.md  lsp-framing.md  progress.md
docs/specs/robotframework/: ast-adapter.md  diagnostics-rules.md  feature-detection.md  (+6 more)
docs/stages/: stage-00-foundation.md  stage-01-json-rpc.md  stage-02-lsp-lifecycle.md  stage-03-document-workspace.md  stage-04-robotframework-model.md  stage-05-diagnostics.md  stage-06-completion.md  stage-07-hover.md  stage-08-navigation.md  stage-09-workspace-index.md  stage-10-refactoring.md  stage-11-formatting-code-actions.md  stage-12-performance-isolation.md  stage-13-configuration.md  stage-14-release-hardening.md
src/robot_lsp/: main.py  worker.py
tests/integration/: test_stdio_server.py  test_worker_subprocess.py
tests/unit/: test_debug_listener.py  test_imports.py  test_main.py
(+131 files in other folders)
